# egl_template_windows

./: .gitattributes  CMakeLists.txt  Readme.md
libs_x86_64/: libEGL.lib  libGLES_CM.lib  libGLESv2.lib
src/: CMakeLists.txt  main.c
