CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(HelloEGL)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/EGL-Registry/api)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/OpenGL-Registry/api)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/libs_x86_64)

ADD_SUBDIRECTORY(src)
