ENABLE_LANGUAGE(C)

SET(SRCS main.c)

SET(ORIG_LIBS EGL GLES_CM GLESv2)

# add `lib` prefix to the library names if it's MSVC
IF(MSVC)
  FOREACH(LIB ${ORIG_LIBS})
    SET(LIBS ${LIBS} "lib${LIB}")
  ENDFOREACH(LIB)
ELSE(MSVC)
  SET(LIBS ${ORIG_LIBS})
ENDIF(MSVC)

SET(WINLIBS user32 gdi32 kernel32)

SET(BIN_NAME eghello)

ADD_EXECUTABLE(${BIN_NAME} WIN32 ${SRCS})

TARGET_LINK_LIBRARIES(${BIN_NAME} ${LIBS} ${WINLIBS})

